--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ dd {
   font-weight: bold;
   padding: .4em .75em .5em;
   display: inline-block;
-  margin: 1rem;
+  margin: 0 1rem 1rem;
   text-align: center;
 }
 
